--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ng-7-transactions</title>
+  <title>Transactions Logger</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="">
   <meta name="apple-mobile-web-app-title" content="Transactions">
   <meta name="theme-color" content="#ffffff" />
-  <link rel="apple-touch-icon" href="/ng-7-transaction/assets/rupee-white.png">
-  <link rel="apple-touch-startup-image" href="/ng-7-transaction/assets/launch.png">
+  <link rel="apple-touch-icon" href="/assets/rupee-white.png">
+  <link rel="apple-touch-startup-image" href="/assets/launch.png">
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="apple-mobile-web-app-capable" content="yes" />
