--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="">
   <meta name="apple-mobile-web-app-title" content="Transactions">
   <meta name="theme-color" content="#ffffff" />
-  <link rel="apple-touch-icon" href="/ng-7-transaction/assets/rupee-white.png">
-  <link rel="apple-touch-startup-image" href="/ng-7-transaction/assets/launch.png">
+  <link rel="apple-touch-icon" href="/assets/rupee-white.png">
+  <link rel="apple-touch-startup-image" href="/assets/launch.png">
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -18,8 +18,8 @@
   <meta name="apple-mobile-web-app-title" content="Cinnamon Churro" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.4e3474be7e6da834a70d.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.96a79543757fc42c416d.js"></script><script type="text/javascript" src="main.14d94ac9591c28704e3d.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
