--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="">
   <meta name="apple-mobile-web-app-title" content="Transactions">
   <meta name="theme-color" content="#ffffff" />
-  <link rel="apple-touch-icon" href="/ng-7-transaction/assets/rupee-white.png">
-  <link rel="apple-touch-startup-image" href="/ng-7-transaction/assets/launch.png">
+  <link rel="apple-touch-icon" href="/assets/rupee-white.png">
+  <link rel="apple-touch-startup-image" href="/assets/launch.png">
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="apple-mobile-web-app-capable" content="yes" />
