--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <meta name="apple-mobile-web-app-title" content="Cinnamon Churro" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
