--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
   <meta charset="utf-8">
   <title>ng-7-transactions</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="">
   <meta name="apple-mobile-web-app-title" content="Transactions">
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#ffffff"/>
   <link rel="apple-touch-icon" href="/assets/rupee-white.png">
   <link rel="apple-touch-startup-image" href="/assets/launch.png">
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="apple-mobile-web-app-title" content="Cinnamon Churro" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+  <meta name="apple-mobile-web-app-title" content="Transactions"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-<link rel="stylesheet" href="styles.4e3474be7e6da834a70d.css"></head>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.ff0540d7509b6844bbb5.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.4d10c1b333ada0ab6568.js"></script><script type="text/javascript" src="main.36708c775d5ec0b15084.js"></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.4d10c1b333ada0ab6568.js"></script><script type="text/javascript" src="main.89ede3c45b8abb06284f.js"></script></body>
 </html>
