--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,13 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined },
+        version: []
+      };
+    </script>
 </body>
 </html>
